tipo doc, tipo user, lista modulos

--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
 </html>
 
 
-<!--npm install --save react-spinners -->
+<!--npm install --save react-spinners  guerreroortegajuancamilo@gmail.com -->
